--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>DH5 Laaaaaaan!</title>
 </head>
 <body>
-    <h1>De börjar närma sig boys!</h1>
+    <h1 class="text-3xl font-bold underline">De börjar närma sig boys!</h1>
 </body>
 </html>
