Fix countdown boxes and change some text

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <main class="countdown">
     <section class="countdown__content">
-      <h1 class="countdown__title">Countdown to Saturday, 15 November 2025</h1>
-      <p class="countdown__subtitle">10:00 a.m. Central European Time (CET)</p>
+      <h1 class="countdown__title">Nedräkning till DH-5 LAN, 15 November 2025</h1>
+      <p class="countdown__subtitle">10:00 - be there.. or face the punishment (10 klUnKzz)</p>
 
       <div id="timer" class="timer">
         <div class="timer__segment">
@@ -32,7 +32,7 @@
       </div>
 
       <p class="countdown__note" id="note">
-        We’re counting down the moments. Stay tuned!
+        PS. Glöm inte hitta några riktigt goa låtar att glänsa med!
       </p>
     </section>
   </main>
